# poloka-flat

./: INSTALL  Makefile.am  README  configure.ac  poloka-flat.pc.in
poloka/: Makefile.am  fitsimagearray.cc  fitsimagearray.h  fitsset.cc  fringeutils.cc  superflat.cc  superflat.h
src/: fitsset.cc  fitsset.h  superflat.h  wscript
tools/: Makefile.am  checkelixirflats.cc  correlation.cc  defringe.cc  flatfield.cc  fringefinder.cc  makefringe.cc  medianstack.cc  pka-imcorrel.cc  pka-imdetrend.cc  pka-imtrim.cc  pka-trendcombine.cc  rustine_for_fringe.cc  trim.cc
